# ifconfig

./: .dockerignore  .env.dist  .gitignore  Cargo.toml  Dockerfile  README.md  coverage.sh  rustfmt.toml
assets/: GeoLite2-Country-Test-2022-02.mmdb  GeoLite2-Country-Test.json  dbip-country-lite-2022-03.mmdb  dbip-country-lite-2022-10.mmdb  dbip-country-lite-2022-11.mmdb
src/: dns.rs  main.rs  tests.rs
src/dns/: client.rs  message.rs  utils.rs
src/templates/: index.html
templates/: index.html
