[package]
name = "ifconfig"
version = "0.3.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies.async-std]
version = "1"
default-features = false

[dependencies.async-std-resolver]
version = "0.21"

[dependencies.dotenv]
version = "0.15"

[dependencies.maxminddb]
version = "0.23"

[dependencies.regex]
version = "1"
default-features = false
features = [
    "std"
]

[dependencies.sailfish]
version = "0.4"

[dependencies.serde]
version = "1"
features = [
    "derive"
]

[dependencies.serde_yaml]
version = "0.8"

[dependencies.serde_json]
version = "1"

[dependencies.tide]
version = "0.16"
default-features = false
features = [
    "h1-server"
]

[dependencies.tracing]
version = "0.1"

[dependencies.tracing-subscriber]
version = "0.3"
features = [
    "env-filter"
]

[dev-dependencies.async-std]
version = "1"
default-features = false
features = [
    "attributes"
]

[dev-dependencies.pretty_assertions]
version = "1"

[profile.release]
opt-level = 3
debug = false
codegen-units = 1
lto = "fat"
incremental = false
